@@ -18,6 +18,7 @@ package org.apache.lucene.search;
  */
 
 import org.apache.lucene.util.AttributeImpl;
+import org.apache.lucene.util.AttributeReflector;
 
 /** Implementation class for {@link BoostAttribute}.
  * @lucene.internal
@@ -43,5 +44,10 @@ public final class BoostAttributeImpl extends AttributeImpl implements BoostAttr
   @Override
   public void copyTo(AttributeImpl target) {
     ((BoostAttribute) target).setBoost(boost);
+  }
+
+  @Override
+  public void reflectWith(AttributeReflector reflector) {
+    reflector.reflect(BoostAttribute.class, "boost", boost);
   }
 }
