@@ -18,6 +18,7 @@ package org.apache.lucene.search;
  */
 
 import org.apache.lucene.util.AttributeImpl;
+import org.apache.lucene.util.AttributeReflector;
 import org.apache.lucene.util.BytesRef;
 
 /** Implementation class for {@link MaxNonCompetitiveBoostAttribute}.
@@ -58,5 +59,11 @@ public final class MaxNonCompetitiveBoostAttributeImpl extends AttributeImpl imp
     final MaxNonCompetitiveBoostAttributeImpl t = (MaxNonCompetitiveBoostAttributeImpl) target;
     t.setMaxNonCompetitiveBoost(maxNonCompetitiveBoost);
     t.setCompetitiveTerm(competitiveTerm);
+  }
+
+  @Override
+  public void reflectWith(AttributeReflector reflector) {
+    reflector.reflect(MaxNonCompetitiveBoostAttribute.class, "maxNonCompetitiveBoost", maxNonCompetitiveBoost);
+    reflector.reflect(MaxNonCompetitiveBoostAttribute.class, "competitiveTerm", competitiveTerm);
   }
 }
